--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MedicineAssistant</string>
+    <string name="no_calendar_entries">No calendar entries</string>
 </resources>
